# sc627_turtle

./: README.md
src/: CMakeLists.txt  README.md  package.xml
src/launch/: gauntlet_classic.launch.py  gauntlet_world.launch.py  map_publisher.launch.py  planner_server.launch.py  spawn_turtlebot3.launch.py
src/maps/: gauntlet_map.pgm  gauntlet_map.yaml
src/params/: turtlebot3_burger_bridge.yaml  turtlebot3_waffle_pi_bridge.yaml
src/rviz/: cspace_view.rviz
src/scripts/: map_publisher.py  planner_server.py
src/worlds/: gauntlet.world
